<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/preparing"
        android:scrollbars="vertical"
        android:padding="8dp"
        android:background="#EEEEEE"
        android:textSize="16sp" />

    <Button
        android:id="@+id/recognize_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_file"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/recognize_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_microphone"
        android:layout_marginTop="8dp" />

    <ToggleButton
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/pause"
        android:textOff="@string/continueRecognition"
        android:layout_marginTop="8dp" />

</LinearLayout>